--- a/src/styles.css
+++ b/src/styles.css
@@ -1,218 +1,335 @@
 /* You can add global styles to this file, and also import other style files */
-* {box-sizing: border-box}
+* {
+  box-sizing: border-box;
+}
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
-    color: #333;
-    box-sizing: border-box;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 14px;
+  color: #333;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin: 8px 0;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 8px 0;
+}
 
-  p {
-    margin: 0;
-  }
+p {
+  margin: 0;
+}
 
-  .spacer {
-    flex: 1;
-  }
+.spacer {
+  flex: 1;
+}
 
-  /* Style the body */
- 
-  /* Header/logo Title */
-  .header {
-    padding: 10px;
-    text-align: center;
-    background-color: #1976d2;
-    color: white;
-    height: 60px;
-    margin: 0px;
-    display: flex;
-    align-items: center;
-    font-weight: 600;
-  }
-  
-  /* Increase the font size of the heading */
-  .header h1 {
-    font-size: 24px;
-  }
+/* Style the body */
 
-  .filter{
-      padding: 5px 5px;
-      float: right;
-      flex: auto;
-      flex-direction: row;
-      font-weight: bold;
-      font-size: 16px;
-  }
+/* Header/logo Title */
+.header {
+  padding: 10px;
+  text-align: center;
+  background-color: #1976d2;
+  color: white;
+  height: 60px;
+  margin: 0px;
+  display: flex;
+  align-items: center;
+  font-weight: 600;
+}
 
-  .filter input{
-      width: 350px !important;
+/* Increase the font size of the heading */
+.header h1 {
+  font-size: 24px;
+}
+
+.filter {
+  padding: 5px 5px;
+  float: right;
+  flex: auto;
+  flex-direction: row;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.filter input {
+  width: 350px !important;
+}
+
+/* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+}
+
+/* Style the navigation bar links */
+.navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 20px;
+  text-decoration: none;
+}
+
+/* Right-aligned link */
+.navbar a.right {
+  float: right;
+}
+
+/* Change color on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Active/current link */
+.navbar a.active {
+  background-color: #666;
+  color: white;
+}
+
+/* Column container */
+.row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+}
+
+/* Create two unequal columns that sits next to each other */
+/* Sidebar/left column */
+.side {
+  -ms-flex: 20%; /* IE10 */
+  flex: 20%;
+  background-color: #f1f1f1;
+  padding: 20px;
+}
+
+/* Main column */
+.main {
+  -ms-flex: 80%; /* IE10 */
+  flex: 80%;
+  background-color: white;
+  padding: 20px;
+}
+
+/* Fake image, just for this example */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
+}
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+}
+
+.header img {
+  margin: 0 16px;
+}
+
+.tab {
+  float: left;
+  border: 1px solid #ccc;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+}
+
+/* Style the buttons inside the tab */
+.tab a {
+  display: block;
+  background-color: inherit;
+  color: #0e0d0d;
+  padding: 15px 10px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 14px;
+}
+
+/* Change background color of buttons on hover */
+.tab a:hover {
+  color: #888;
+}
+
+/* Create an active/current "tab button" class */
+.tab a.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  float: left;
+  padding: 0px 5px;
+  border: 1px solid #ccc;
+  width: 85%;
+  border-left: none;
+  height: 100%;
+}
+
+.btn {
+  background-color: DodgerBlue; /* Blue background */
+  border: none; /* Remove borders */
+  color: white; /* White text */
+  padding: 12px 16px; /* Some padding */
+  font-size: 16px; /* Set a font size */
+  cursor: pointer; /* Mouse pointer on hover */
+}
+
+/* Darker background on mouse-over */
+.btn:hover {
+  background-color: RoyalBlue;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+}
+
+td {
+  text-align: left;
+  padding: 16px;
+}
+
+th {
+  text-align: center;
+  padding: 16px;
+  color: rgb(212, 212, 212);
+  background-color: rgb(12, 12, 12);
+  cursor: pointer;
+  font-weight: bold;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+.tr-total {
+  background-color: lightblue !important;
+}
+
+.td-right {
+  text-align: right;
+  padding-right: 15px;
+}
+
+.td-center {
+  text-align: center;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
+.save {
+  display: flex;
+  width: 50%;
+  float: left;
+}
+
+.component-heading {
+  display: flex;
+  margin: 5px 5px;
+}
+.component-heading h1 {
+  width: 80%;
+  flex: auto;
+  font-size: 20px;
+}
+
+.component-heading button {
+  text-align: right;
+}
+
+.form-container {
+    padding: 16px;
   }
   
-  /* Sticky navbar - toggles between relative and fixed, depending on the scroll position. It is positioned relative until a given offset position is met in the viewport - then it "sticks" in place (like position:fixed). The sticky value is not supported in IE or Edge 15 and earlier versions. However, for these versions the navbar will inherit default position */
-  .navbar {
-    overflow: hidden;
-    background-color: #333;
-    position: sticky;
-    position: -webkit-sticky;
-    top: 0;
-  }
-  
-  /* Style the navigation bar links */
-  .navbar a {
-    float: left;
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 20px;
-    text-decoration: none;
-  }
-  
-  
-  /* Right-aligned link */
-  .navbar a.right {
-    float: right;
-  }
-  
-  /* Change color on hover */
-  .navbar a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Active/current link */
-  .navbar a.active {
-    background-color: #666;
-    color: white;
-  }
-  
-  /* Column container */
-  .row {  
-    display: -ms-flexbox; /* IE10 */
-    display: flex;
-    -ms-flex-wrap: wrap; /* IE10 */
-    flex-wrap: wrap;
-  }
-  
-  /* Create two unequal columns that sits next to each other */
-  /* Sidebar/left column */
-  .side {
-    -ms-flex: 20%; /* IE10 */
-    flex: 20%;
-    background-color: #f1f1f1;
-    padding: 20px;
-  }
-  
-  /* Main column */
-  .main {   
-    -ms-flex: 80%; /* IE10 */
-    flex: 80%;
-    background-color: white;
-    padding: 20px;
-  }
-  
-  /* Fake image, just for this example */
-  .fakeimg {
-    background-color: #aaa;
+  /* Full-width input fields */
+ .form input[type=text], input[type=password] {
     width: 100%;
-    padding: 20px;
-  }
-  
-  /* Footer */
-  .footer {
-    padding: 20px;
-    text-align: center;
-    background: #ddd;
-  }
-  
-  .header img {
-    margin: 0 16px;
-  }
-
-  .tab {
-    float: left;
-    border: 1px solid #ccc;    
-    width: 100%;
-    height: 100%;    
-    overflow-x: hidden;
-  }
-  
-  /* Style the buttons inside the tab */
-  .tab a {
-    display: block;
-    background-color: inherit;
-    color: #0e0d0d;
-    padding: 15px 10px;    
-    width: 100%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
     border: none;
+    background: #f1f1f1;
+  }
+  
+ .form input[type=text]:focus, input[type=password]:focus {
+    background-color: #ddd;
     outline: none;
-    text-align: left;
+  }
+  
+  /* Overwrite default styles of hr */
+  hr {
+    border: 1px solid #f1f1f1;
+    margin-bottom: 25px;
+  }
+  
+  /* Set a style for the submit/register button */
+  .btn-submit {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px 20px;
+    margin: 10px 0;
+    border: none;
     cursor: pointer;
-    transition: 0.3s;
-    font-size: 14px;
+    width: 15%;
+    opacity: 0.9;
+  }
+  
+  .btn-submit:hover {
+    opacity:1;
   }
 
-  /* Change background color of buttons on hover */
-.tab a:hover {    
-    color: #888;
-  }
-  
-  /* Create an active/current "tab button" class */
-  .tab a.active {
-    background-color: #ccc;
-  }
-  
-  /* Style the tab content */
-  .tabcontent {
-    float: left;
-    padding: 0px 5px;
-    border: 1px solid #ccc;
-    width: 85%;
-    border-left: none;
-    height: 100%;
-  }
-
-  .btn {
-    background-color: DodgerBlue; /* Blue background */
-    border: none; /* Remove borders */
-    color: white; /* White text */
-    padding: 12px 16px; /* Some padding */
-    font-size: 16px; /* Set a font size */
-    cursor: pointer; /* Mouse pointer on hover */
-  }
-  
-  /* Darker background on mouse-over */
-  .btn:hover {
-    background-color: RoyalBlue;
+  .btn-cancel {
+    background-color: rgba(250, 152, 86, 0.904);
+    color: white;
+    padding: 16px 20px;
+    margin: 10px 10px;
+    border: none;
+    cursor: pointer;
+    width: 15%;
+    opacity: 0.9;
   }
   
   @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+  .sidenav {
+    padding-top: 15px;
   }
+  .sidenav a {
+    font-size: 18px;
+  }
+}
 
-  /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 700px) {
-    .row {   
-      flex-direction: column;
-    }
+/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 700px) {
+  .row {
+    flex-direction: column;
   }
-  
-  /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-  @media screen and (max-width: 400px) {
-    .navbar a {
-      float: none;
-      width: 100%;
-    }
-  }
+}
 
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
+  .navbar a {
+    float: none;
+    width: 100%;
+  }
+}
