--- a/src/app/customers/customer.new/customer.new.component.html
+++ b/src/app/customers/customer.new/customer.new.component.html
@@ -1,6 +1,9 @@
 <style>
-    /* Full-width input fields */
- input[type=text], input[type=password], select {
+  /* Full-width input fields */
+  input[type="text"],
+  input[type="password"],
+  input[type="date"],
+  select {
     width: 100%;
     padding: 15px;
     margin: 5px 0 22px 0;
@@ -8,35 +11,48 @@
     border: none;
     background: #f1f1f1;
   }
-  
- input[type=text]:focus, input[type=password]:focus {
+
+  input[type="text"]:focus,
+  input[type="password"]:focus {
     background-color: #ddd;
     outline: none;
   }
+  .error{
+      color: red;
+  }
 </style>
 
-<form>
-        <div class="form-container">
-          <h1>New Customer</h1>
-          <p>Please fill in this form to create an Customer.</p>
-          <hr>      
-          <label for="name"><b>Name</b></label>
-          <input type="text" placeholder="Enter Name" name="name" required>
-      
-          <label for="city"><b>City</b></label>
-          <select name="city" id="city" required>
-              <option value="Chennai">Chennai</option>
-              <option value="Mumbai">Mumbai</option>
-              <option value="Hyderabad">Hyderabad</option>
-              <option value="New York">New York</option>
-          </select>      
-          <label for="since"><b>Customer Since</b></label>
-          <input type="text" placeholder="Customer Since" name="since" required>
-          <hr>
-      
-          <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-          <button type="submit" class="btn-submit" (click)="Save()"><i class="fa fa-save"></i> Save</button> 
-          <button type="submit" class="btn-cancel"><i class="fa fa-eraser"></i> Cancel</button>
-        </div>
-       
-      </form>
+<form [formGroup]="customerForm">
+  <div class="form-container">
+    <h1>New Customer</h1>
+    <p>Please fill in this form to create an Customer.</p>
+    <hr />
+    <label for="name"><b>Name</b></label>
+    <input type="text" formControlName="name" placeholder="Enter Name" name="name" required />
+
+    <label for="city"><b>City</b></label>
+    <select name="city" formControlName="city" id="city" required>
+      <option value="">Select City</option>
+      <option value="Chennai">Chennai</option>
+      <option value="Mumbai">Mumbai</option>
+      <option value="Hyderabad">Hyderabad</option>
+      <option value="New York">New York</option>
+    </select>
+    <label for="since"><b>Customer Since</b></label>
+    <input type="date" formControlName="customerSince" placeholder="Customer Since" name="since" required />
+    <hr />
+
+    <p>
+      By creating an account you agree to our <a href="#">Terms & Privacy</a>.
+    </p>
+    <button type="submit" class="btn-submit" (click)="Save()">
+      <i class="fa fa-save"></i> Save
+    </button>
+    <button type="submit" class="btn-cancel">
+      <i class="fa fa-eraser"></i> Cancel
+    </button>
+  </div>
+  <div class="error">
+     
+  </div>
+</form>
